--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@ layout: home
 ---
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>On maintenance</title>
 	</head>
 	<body>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/cv">Feed</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, It's an explicit website.</h1>
+				<p>⚠️ Warning: Explicit content 🔞 <em>Don't view this content if you're not 18+</em> . <a href="/about">xvideos</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="xvideos18plus@gmail.com">email</a></li>
+        		<li><a href="https://github.com/tor">Tor</a></li>
 			</ul>
 		</footer>
 	</body>
