--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: home
 				<p>⚠️ Warning: Explicit content 🔞 <em>Don't view this content if you're not 18+</em> . <a href="/about">xvideos</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-                <iframe src="www.xvideos.com"></iframe>
+                <iframe src="url"></iframe>
 		<footer>
     		<ul>
         		<li><a href="xvideos18plus@gmail.com">email</a></li>
